--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
     <section id="home">
         <div class="glass">
-            <img src="images/me.jpg" alt="Zakeesha Elisha L. Canubas" class="profile-img">
+            <img src="me.jpg" alt="Zakeesha Elisha L. Canubas" class="profile-img">
             <h1>Hello, I'm <span style="color:#1e90ff;">Zakeesha Elisha L. Canubas</span></h1>
             <p>3rd Year IT Student | Aspiring Front-End Developer</p>
             <p>I love building clean, modern, and user-friendly web interfaces. Currently learning and improving my
@@ -411,5 +411,6 @@
 
 
 </body>
+
 
 </html>
