--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
     <section id="home">
         <div class="glass">
-            <img src="images/me.jpg" alt="Zakeesha Elisha L. Canubas" class="profile-img">
+            <img src="me.jpg" alt="Zakeesha Elisha" class="profile-img">
             <h1>Hello, I'm <span style="color:#1e90ff;">Zakeesha Elisha L. Canubas</span></h1>
             <p><strong>3rd Year IT Student | Aspiring Front-End Developer</strong></p>
             <p>I love building clean, modern, and user-friendly web interfaces. Currently learning and improving my
@@ -446,3 +446,4 @@
 </body>
 
 </html>
+
