--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 </head>
 
 <body>
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">
@@ -83,17 +82,15 @@
     </div>
   </nav>
 
-  <!-- Home -->
   <section id="home">
     <div class="glass">
-      <img src="images/me.jpg" alt="Zakeesha Elisha L. Canubas" class="profile-img">
+      <img src="me.jpg" alt="Zakeesha Elisha L. Canubas" class="profile-img">
       <h1>Hello, I'm <span style="color:#1e90ff">Zakeesha Elisha L. Canubas</span></h1>
       <p><strong>3rd Year IT Student | Aspiring Front-End Developer</strong></p>
       <p>I love building clean, modern, and user-friendly web interfaces. Currently learning and improving my skills in HTML, CSS, JavaScript, and modern frameworks.</p>
     </div>
   </section>
 
-  <!-- About -->
   <section id="about" class="py-5">
     <div class="container">
       <div class="glass shadow-lg p-4">
@@ -105,7 +102,6 @@
     </div>
   </section>
 
-  <!-- CV -->
   <section id="cv">
     <div class="glass">
       <h2>Curriculum Vitae</h2>
@@ -114,7 +110,6 @@
     </div>
   </section>
 
-  <!-- Portfolio -->
   <section id="portfolio" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">My Projects</h2>
@@ -132,7 +127,6 @@
     </div>
   </section>
 
-  <!-- Contact -->
   <section id="contact">
     <div class="glass">
       <h2>Contact Me</h2>
@@ -146,7 +140,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="footer-container">
       <div class="footer-section">
@@ -176,7 +169,6 @@
     <div class="footer-bottom"><p>© 2025 Zakeesha Elisha L. Canubas. All rights reserved.</p></div>
   </footer>
 
-  <!-- Animations -->
   <script>
     const observer=new IntersectionObserver(entries=>{
       entries.forEach(e=>e.isIntersecting?e.target.classList.add('visible'):e.target.classList.remove('visible'))
@@ -185,3 +177,4 @@
   </script>
 </body>
 </html>
+
