--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -229,50 +228,35 @@
 
   <!-- Portfolio -->
   <section id="portfolio" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">My Projects</h2>
-      <div class="row justify-content-center">
-        <div class="col-md-4 col-sm-6 mb-4">
-          <div class="card glass shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">eQash Banking System</h5>
-              <p class="card-text">A secure web banking system with deposits, withdrawals, transfers, balance tracking,
-                and admin management.</p>
-              <a href="#" target="_blank" class="btn btn-sm btn-primary">🔗 View Project</a>
+  <div class="container">
+    <h2 class="text-center mb-4">My Projects</h2>
+    <div class="row justify-content-center">
+      <!-- eQash Banking System -->
+      <div class="col-md-4 col-sm-6 mb-4">
+        <div class="card glass shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">eQash Banking System</h5>
+            <p class="card-text">A secure web banking system with deposits, withdrawals, transfers, balance tracking,
+              and admin management.</p>
+            <a href="#" target="_blank" class="btn btn-sm btn-primary">🔗 View Project</a>
+          </div>
+        </div>
+      </div>
 
-            </div>
+      <!-- iPhone 13 Showcase -->
+      <div class="col-md-4 col-sm-6 mb-4">
+        <div class="card glass shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">iPhone 13 Showcase</h5>
+            <p class="card-text">A modern, interactive showcase of iPhone 13 with animations and responsive design.</p>
+            <a href="https://ishaec.github.io/iphone13-showcase/" target="_blank" class="btn btn-sm btn-primary">🔗 View Project</a>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="contact">
-    <div class="glass">
-      <h2>Contact Me</h2>
-      <p>Feel free to reach out via email or connect with me on social media.</p>
-      <div class="contact-links">
-        <a href="mailto:zakeeshaelishacanubas@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-        <a href="https://github.com/ishaec" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        <a href="https://m.me/zakeeshaelishacanubas" target="_blank"><i class="fab fa-facebook-messenger"></i>
-          Messenger</a>
-        <a href="https://facebook.com/zakeeshaelishacanubas" target="_blank"><i class="fab fa-facebook"></i>
-          Facebook</a>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <h3>iPhone 13 Showcase</h3>
-      <p>
-        A modern and interactive product showcase for the iPhone 13, featuring sleek animations, responsive design, and
-        a gradient background. Built using HTML, CSS, and Bootstrap for smooth viewing across all devices.
-      </p>
-      <a href="https://ishaec.github.io/iphone13-showcase/" target="_blank" class="project-link">
-        🔗 View Project
-      </a>
-    </div>
-
-  </section>
 
   <footer>
     <div class="container d-flex flex-wrap justify-content-between gap-4">
@@ -610,4 +594,3 @@
 </body>
 
 </html>
->>>>>>> aa0d190d9eecf5612502a8cd6a6926cfecbe76ab
