--- a/index.html
+++ b/index.html
@@ -226,55 +226,52 @@
     </div>
   </section>
 
-  <!-- Portfolio -->
   <section id="portfolio" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">My Projects</h2>
       <div class="row justify-content-center">
+
         <!-- eQash Banking System -->
-        <div class="col-md-4 col-sm-6 mb-4">
-          <div class="card glass shadow-sm">
-            <div class="card-body">
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+          <div class="card glass shadow-sm h-100">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">eQash Banking System</h5>
-              <p class="card-text">A secure web banking system with deposits, withdrawals, transfers, balance tracking,
-                and admin management.</p>
-              <a href="#" target="_blank" class="btn btn-sm btn-primary">🔗 View Project</a>
+              <p class="card-text flex-grow-1">A secure web banking system with deposits, withdrawals, transfers,
+                balance tracking, and admin management.</p>
+              <a href="#" target="_blank" class="btn btn-sm btn-primary mt-auto">🔗 View Project</a>
             </div>
           </div>
         </div>
 
         <!-- iPhone 13 Showcase -->
-        <div class="col-md-4 col-sm-6 mb-4">
-          <div class="card glass shadow-sm">
-            <div class="card-body">
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+          <div class="card glass shadow-sm h-100">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">iPhone 13 Showcase</h5>
-              <p class="card-text">A modern, interactive showcase of iPhone 13 with animations and responsive design.
-              </p>
-              <a href="https://ishaec.github.io/iphone13-showcase/" target="_blank" class="btn btn-sm btn-primary">🔗
-                View Project</a>
+              <p class="card-text flex-grow-1">A modern, interactive showcase of iPhone 13 with animations and
+                responsive design.</p>
+              <a href="https://ishaec.github.io/iphone13-showcase/" target="_blank"
+                class="btn btn-sm btn-primary mt-auto">🔗 View Project</a>
             </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <!-- Switzerland Showcase -->
-    <div class="col-md-4 col-sm-6 mb-4">
-      <div class="card glass shadow-sm">
-        <div class="card-body">
-          <h5 class="card-title">Switzerland Showcase</h5>
-          <p class="card-text">An interactive showcase highlighting Switzerland's landscapes, culture, and tourist spots
-            with a responsive design.</p>
-          <a href="https://ishaec.github.io/switzerland-showcase/" target="_blank" class="btn btn-sm btn-primary">🔗
-            View Project</a>
+        <!-- Switzerland Showcase -->
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+          <div class="card glass shadow-sm h-100">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Switzerland Showcase</h5>
+              <p class="card-text flex-grow-1">An interactive showcase highlighting Switzerland's landscapes, culture,
+                and tourist spots with a responsive design.</p>
+              <a href="https://ishaec.github.io/switzerland-showcase/" target="_blank"
+                class="btn btn-sm btn-primary mt-auto">🔗 View Project</a>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    </div>
+      </div>
     </div>
   </section>
-
 
   <footer>
     <div class="container d-flex flex-wrap justify-content-between gap-4">
